--- a/.infra/ansible/roles/setup/tasks/cli-scripts.yml
+++ b/.infra/ansible/roles/setup/tasks/cli-scripts.yml
@@ -3,11 +3,11 @@
     name: "classify-verbatims"
     minute: "0"
     hour: "3"
-    job: "sudo docker exec sirius_server yarn cli db classify-verbatims >> /var/log/cron.log 2>&1"
+    job: "sudo docker exec sirius_server yarn cli classify-verbatims >> /var/log/cron.log 2>&1"
 
 - name: Add cron to extract themes from verbatims
   ansible.builtin.cron:
     name: "extract-themes-verbatims"
     minute: "0"
     hour: "5"
-    job: "sudo docker exec sirius_server yarn cli db extract-themes-verbatims >> /var/log/cron.log 2>&1"
+    job: "sudo docker exec sirius_server yarn cli extract-themes-verbatims >> /var/log/cron.log 2>&1"
