feat(infra): add psql in recette

--- a/.infra/ansible/roles/setup/files/app/.overrides/recette/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/recette/docker-compose.env.yml
@@ -65,7 +65,23 @@ services:
       - /opt/sirius/data/mongodb/backups:/data/backups
       - /opt/sirius/.overrides/mongodb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d:ro
 
+  postgres:
+    image: postgres:15.5
+    container_name: sirius_postgres
+    restart: unless-stopped
+    networks:
+      - sirius_network
+    environment:
+      - POSTGRES_PASSWORD={{ vault[env_type].SIRIUS_PSQL_PWD }}
+    ports:
+      - "5432:5432"
+    volumes:
+      - sirius_postgres_data:/var/lib/postgresql/data:z
+
 volumes:
   sirius_mailpit_data:
     driver: local
     name: sirius_mailpit_data
+  sirius_postgres_data:
+    driver: local
+    name: sirius_postgres_data
