fix(infra): add correct env var for prod

--- a/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
@@ -28,4 +28,7 @@ services:
       - SIRIUS_SLACK_SIGNING_SECRET={{ vault[env_type].SIRIUS_SLACK_SIGNING_SECRET }}
       - SIRIUS_SLACK_CHANNEL=sirius-bot
       - SIRIUS_SENTRY_DSN=https://e7c750d2c1c94092ba24d85896703a47@sentry.incubateur.net/152
+      - SIRIUS_PSQL_URI={{ vault[env_type].SIRIUS_PSQL_URI }}
+      - SIRIUS_PSQL_CA={{ vault[env_type].SIRIUS_PSQL_CA }}
+
 
