chore(deps): add react-tooltip

--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "react-simple-tooltip": "2.6.3",
     "react-sortablejs": "6.1.4",
     "react-spinners": "0.13.8",
+    "react-tooltip": "5.28.0",
     "sortablejs": "1.15.0",
     "yup": "1.0.2"
   },
