--- a/reverse_proxy/app/nginx/nginx.conf
+++ b/reverse_proxy/app/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade";
-    add_header Content-Security-Policy "frame-ancestors 'self' *.onisep.fr *.beta.gouv.fr";
+    add_header Content-Security-Policy "frame-ancestors 'self' *.onisep.fr *.beta.gouv.fr *.incubateur.net";
     
     gzip on;
     gzip_vary on;
