refactor: workspaces, ts, linter

--- a/package.json
+++ b/package.json
@@ -1,8 +1,83 @@
 {
-  "devDependencies": {
-    "husky": "9.0.11"
+  "name": "sirius",
+  "description": "[IJ] Sirius",
+  "repository": "https://github.com/mission-apprentissage/sirius.git",
+  "version": "0.0.0",
+  "author": "IJ",
+  "license": "LICENSED",
+  "private": true,
+  "packageManager": "yarn@3.6.1",
+  "engines": {
+    "node": ">=20",
+    "npm": "please-use-yarn"
+  },
+  "workspaces": [
+    "ui",
+    "server"
+  ],
+  "dependencies": {
+    "@sentry/cli": "^2.37.0",
+    "dotenv": "^16.4.5",
+    "eslint-plugin-react": "^7.37.1",
+    "global": "4.4.0",
+    "husky": "^9.1.6"
   },
   "scripts": {
-    "prepare": "husky"
+    "talisman:add-exception": "yarn node-talisman --githook pre-commit -i",
+    "lint": "eslint --ignore-path .gitignore --cache --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "yarn lint --fix",
+    "prettier:fix": "prettier --write -u .",
+    "prettier:check": "prettier --check -u .",
+    "postinstall": "husky"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@cypress/chrome-recorder": "^2.3.1",
+    "@dword-design/eslint-plugin-import-alias": "^5.1.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitest/coverage-v8": "^0.34.2",
+    "commander": "^10.0.1",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.17",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-cypress": "^2.14.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-zod": "^1.4.0",
+    "lint-staged": "^14.0.1",
+    "node-talisman": "^1.29.10",
+    "prettier": "^3.0.3",
+    "semantic-release": "^21.0.7",
+    "semantic-release-slack-bot": "^4.0.0",
+    "typescript": "^5.1.6",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^2.0.5"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "trailingComma": "es5",
+    "arrowParens": "always"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --ignore-path .gitignore --cache --fix",
+      "prettier --write -u"
+    ],
+    "*": [
+      "prettier --write -u"
+    ],
+    "yarn.lock": [
+      "yarn dedupe"
+    ]
   }
 }
