--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,17 +1,55 @@
 {
   "compilerOptions": {
+    /* Visit https://aka.ms/tsconfig.json to read more about this file */
+    /* Projects */
+    "incremental": true /* Enable incremental compilation */,
+    /* Language and Environment */
+    // "target": "ES2022",
     "target": "ES6",
+    "lib": [
+      "ES2023"
+    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+
+    /* Modules */
+    // "module": "ESNext",
     "module": "nodenext",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    // "moduleResolution": "node",
+
+    "paths": {
+      "@/*": ["./src/*"],
+      "@tests/*": ["./tests/*"],
+      "shared/*": ["../shared/src/*"]
+    },
+    // "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "typeRoots": ["./types", "./node_modules/@types/", "../node_modules/@types/"],
+    /* JavaScript Support */
     "allowJs": true,
-    "checkJs": false
+    /* Emit */
+    "outDir": "./dist",
+    /* Interop Constraints */
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    /* Type Checking */
+    "strict": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "exactOptionalPropertyTypes": false,
+    "noImplicitReturns": true,
+    "useUnknownInCatchVariables": false,
+    "noUncheckedIndexedAccess": false,
+    /* Completeness */
+    "skipLibCheck": true,
+    /* Output Formatting */
+    "pretty": true,
+    "noErrorTruncation": true
+    // "noUncheckedSideEffectImports": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "include": ["./**/*.ts", "./**/*.js"],
+  "exclude": ["**/node_modules", "coverage", "dist"],
+  "typeAcquisition": {
+    "enable": true,
+    "include": ["@types/node"]
+  }
 }
