--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,10 @@
 {
   "name": "ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
+  "engines": {
+    "node": ">=22",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -28,6 +31,10 @@
     "@tanstack/react-query": "5.28.9",
     "@tanstack/react-query-devtools": "5.28.10",
     "@tanstack/react-table": "8.10.3",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.7.6",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "chakra-react-select": "4.6.0",
     "echarts": "5.4.2",
     "echarts-for-react": "3.0.2",
@@ -48,18 +55,13 @@
     "react-sortablejs": "6.1.4",
     "react-spinners": "0.13.8",
     "sortablejs": "1.15.0",
+    "typescript": "5.6.3",
     "yup": "1.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.34.0",
-    "local-web-server": "4.2.1",
-    "prettier": "2.8.4"
+    "@testing-library/user-event": "14.4.3"
   },
   "browserslist": {
     "production": [
