--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "server:dev": "yarn workspace server dev",
     "ui:dev": "yarn workspace ui start",
+    "cli": "yarn workspace server cli",
     "services:start": "docker compose up --remove-orphans -d --wait",
     "services:stop": "docker compose down",
     "services:clean": "yarn services:stop; docker system prune --volumes",
