--- a/server/package.json
+++ b/server/package.json
@@ -11,18 +11,12 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-    "start": "ts-node src/cli.js http",
-    "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore test/ dist/cli.js http",
-    "test": "mocha --require ts-node/register --recursive --exit --timeout 5000 test/**/*.test.ts",
-    "test:watch": "nodemon --exec \"mocha --require ts-node/register --recursive --exit --timeout 5000 test/**/*.test.ts\"",
-    "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --require ts-node/register --recursive --exit --timeout 500 test/**/*.test.ts",
-    "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres",
-    "cli:old": "ts-node -T src/cli.js",
-    "dev:old": "nodemon --watch src --ext ts,js,json --ignore test/ dist/cli.js http",
     "cli": "node dist/index.js",
+    "build:dev": "tsup-node",
     "dev": "tsup-node --env.TSUP_WATCH true",
     "build": "tsup-node --env.NODE_ENV production",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres"
   },
   "dependencies": {
     "@hapi/boom": "10.0.0",
@@ -77,11 +71,14 @@
     "@eslint/js": "9.8.0",
     "@faker-js/faker": "7.6.0",
     "@types/bcrypt": "5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/node": "20.14.10",
     "@types/passport": "1.0.16",
     "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
     "@types/pg": "8.11.6",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
@@ -98,6 +95,7 @@
     "supertest": "6.3.3",
     "ts-node": "10.9.2",
     "tsup": "^8.3.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "vitest": "^2.1.3"
   }
 }
