refactor: pg db handler

--- a/server/.env.test
+++ b/server/.env.test
@@ -4,7 +4,7 @@ PUBLIC_VERSION=0.0.1
 ENV=test
 PUBLIC_URL=http://localhost
 EMAIL=mail@mail.com
-# DB TODO
+PSQL_URI=postgresql://postgres:password@localhost:5432/postgres-test-VITEST_POOL_ID
 LOG_TYPE=console
 LOG_LEVEL=none
 SESSION_SECRET=mysecretmysecretmysecretmysecret
