--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -20,6 +20,14 @@
     // ]
     // "@typescript-eslint/no-unused-vars": 0
   },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-unused-vars": 0
+      }
+    }
+  ],
   "settings": {
     "next": {
       "rootDir": "ui"
