--- a/.infra/ansible/preview.yml
+++ b/.infra/ansible/preview.yml
@@ -22,5 +22,5 @@
       vars:
         build: true
         docker_images:
-          - "mna_{{product_name}}_ui"
-          - "mna_{{product_name}}_server"
+          - "ij_{{product_name}}_ui"
+          - "ij_{{product_name}}_server"
