--- a/.infra/ansible/tasks/preview_pr.yml
+++ b/.infra/ansible/tasks/preview_pr.yml
@@ -68,7 +68,7 @@
 
     - name: "[{{ pr_number }}] Build local images 0.0.0-{{ pr_number }}"
       shell:
-        cmd: "flock --verbose --close /tmp/deployment_build.lock .bin/mna preview:build 0.0.0-{{ pr_number }} load preview"
+        cmd: "flock --verbose --close /tmp/deployment_build.lock .bin/product preview:build 0.0.0-{{ pr_number }} load preview"
         chdir: "/opt/app/projects/{{ pr_number }}/repository"
       async: 900 # max 15 minutes
       poll: 15 # check every 15s
@@ -122,7 +122,7 @@
 
     - name: "[{{ pr_number }}] Remove database"
       shell:
-        cmd: docker run --rm -i --network mna_network mongo:6.0.2-focal mongosh "{{ vault[env_type].MONGODB_URI }}" --eval "db.dropDatabase()"
+        cmd: docker run --rm -i --network ij_network mongo:6.0.2-focal mongosh "{{ vault[env_type].MONGODB_URI }}" --eval "db.dropDatabase()"
 
     - name: "[{{ pr_number }}] Removing preview directory"
       shell:
