--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -24,7 +24,8 @@
     {
       "files": ["*.js"],
       "rules": {
-        "@typescript-eslint/no-unused-vars": 0
+        "@typescript-eslint/no-unused-vars": 0,
+        "@typescript-eslint/no-empty-function": 0
       }
     }
   ],
@@ -32,5 +33,6 @@
     "next": {
       "rootDir": "ui"
     }
-  }
+  },
+  "ignorePatterns": ["/public/dsfr/*"]
 }
