--- a/server/.env.test
+++ b/server/.env.test
@@ -1,20 +1,35 @@
-PUBLIC_PRODUCT_NAME=tmpl
-SERVER_PORT=5000
-PUBLIC_VERSION=0.0.1
+# Environment
 ENV=test
 PUBLIC_URL=http://localhost
-EMAIL=mail@mail.com
-PSQL_URI=postgresql://postgres:password@localhost:5432/postgres-test-VITEST_POOL_ID
+SERVER_PORT=5000
 LOG_TYPE=console
-LOG_LEVEL=none
-SESSION_SECRET=mysecretmysecretmysecretmysecret
-SESSION_COOKIE_SECURE=false
-AUTH_USER_JWT_SECRET=jwtsecret
-AUTH_PASSWORD_JWT_SECRET=jwtsecret
-AUTH_HASH_ROUNDS=1000
+LOG_LEVEL=info
+# Sentry
+SENTRY_DSN=https://sentry.incubateur.net
+# PSQL
+PSQL_URI=postgresql://postgres:password@localhost:5432/postgres-test-VITEST_POOL_ID
+PSQL_PWD=
+PSQL_CA=
+PSQL_LOG_LEVEL=info
+# Auth
+AUTH_JWT_SECRET=secret
+AUTH_REFRESH_TOKEN_SECRET=secret
+AUTH_SESSION_EXPIRY=900
+AUTH_REFRESH_TOKEN_EXPIRY=2592000
+AUTH_COOKIE_SECRET=secret
+# SMTP
+EMAIL=mail@mail.com
+EMAIL_FROM=mail@mail.com
 SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_WEBHOOK_KEY=none
 SMTP_AUTH_USER=test
 SMTP_AUTH_PASS=test
+# SLACK
+SLACK_TOKEN=
+SLACK_SIGNING_SECRET=
+SLACK_CHANNEL=
+# PUBLIC
+PUBLIC_VERSION=0.0.1
+PUBLIC_PRODUCT_NAME="sirius"
 
