--- a/server/.env.test
+++ b/server/.env.test
@@ -5,7 +5,7 @@ SERVER_PORT=5000
 LOG_TYPE=console
 LOG_LEVEL=info
 # Sentry
-SENTRY_DSN=https://sentry.incubateur.net
+SENTRY_DSN=
 # PSQL
 PSQL_URI=postgresql://postgres:password@localhost:5432/postgres-test-VITEST_POOL_ID
 PSQL_PWD=
@@ -31,5 +31,5 @@ SLACK_SIGNING_SECRET=
 SLACK_CHANNEL=
 # PUBLIC
 PUBLIC_VERSION=0.0.1
-PUBLIC_PRODUCT_NAME="sirius"
+PUBLIC_PRODUCT_NAME=sirius
 
