--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,9 +1,11 @@
 name: PR CI
 on:
-  pull_request:
-    types: [opened, synchronize, edited, reopened, ready_for_review, closed]
+  # pull_request:
+  #   types: [opened, synchronize, edited, reopened, ready_for_review, closed]
+  push:
+    branches: [feature/upgrades]
 
 jobs:
   tests:
-    if: github.event.pull_request.state == 'open'
+    # if: github.event.pull_request.state == 'open'
     uses: "./.github/workflows/ci.yml"
