--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: postgres:15.5
     restart: unless-stopped
     environment:
+      - POSTGRES_DB=sirius
       - POSTGRES_PASSWORD=password
     ports:
       - "127.0.0.1:5432:5432"
