fix: psql config dyn

--- a/.infra/.env_server
+++ b/.infra/.env_server
@@ -7,8 +7,11 @@ LOG_LEVEL=info
 # Sentry
 SENTRY_DSN={{ vault[env_type].SENTRY_DSN }}
 # PSQL
-PSQL_URI={{ vault[env_type].PSQL_URI }}
+PSQL_HOST={{ vault[env_type].PSQL_HOST }}
+PSQL_PORT={{ vault[env_type].PSQL_PORT }}
+PQSL_USER={{ vault[env_type].PQSL_USER }}
 PSQL_PWD={{ vault[env_type].PSQL_PWD }}
+PSQL_URI={{ vault[env_type].PSQL_URI }}
 PSQL_CA={{ vault[env_type].PSQL_CA }}
 PSQL_LOG_LEVEL={{ vault[env_type].PSQL_LOG_LEVEL }}
 # Auth
