--- a/server/.env.test
+++ b/server/.env.test
@@ -7,8 +7,11 @@ LOG_LEVEL=info
 # Sentry
 SENTRY_DSN=
 # PSQL
+PSQL_HOST=localhost
+PSQL_PORT=5432
+PQSL_USER=postgres
+PSQL_PWD=password
 PSQL_URI=postgresql://postgres:password@localhost:5432/sirius-test-VITEST_POOL_ID
-PSQL_PWD=
 PSQL_CA=
 PSQL_LOG_LEVEL=info
 # Auth
