--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -13,18 +13,18 @@ host_name={{product_name}}-production
 env_type=production
 
 [recette]
-141.95.166.47
+91.134.7.100
 [recette:vars]
 dns_name={{domain_name}}-recette.inserjeunes.beta.gouv.fr
 host_name={{product_name}}-recette
 env_type=recette
 
-[next]
-91.134.7.100
-[next:vars]
-dns_name={{domain_name}}-next.inserjeunes.beta.gouv.fr
-host_name={{product_name}}-recette
-env_type=recette
+# [next]
+# 91.134.7.100
+# [next:vars]
+# dns_name={{domain_name}}-next.inserjeunes.beta.gouv.fr
+# host_name={{product_name}}-recette
+# env_type=recette
 
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
