--- a/.infra/files/configs/reverse_proxy/locations/90_location_ui.conf.template
+++ b/.infra/files/configs/reverse_proxy/locations/90_location_ui.conf.template
@@ -5,4 +5,6 @@ location / {
     # expires $ui_expires;
 
     client_max_body_size 0;
+
+    add_header Content-Security-Policy "frame-ancestors 'self' *.onisep.fr *.beta.gouv.fr *.incubateur.net";
 }
