--- a/ui/package.json
+++ b/ui/package.json
@@ -11,9 +11,8 @@
     "test": "react-scripts test",
     "serve": "ws --port 3000 --log.format dev --spa index.html",
     "eject": "react-scripts eject",
-    "postinstall": "react-dsfr copy-static-assets",
     "predev": "react-dsfr update-icons",
-    "prebuild": "react-dsfr update-icons",
+    "prebuild": "react-dsfr copy-static-assets ; react-dsfr update-icons",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
