--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-    "start": "yarn dsfr:copy && yarn dsfr:update && react-scripts start",
+    "start": "yarn dsfr:copy && react-scripts start",
     "build": "yarn dsfr:copy && react-scripts build",
     "test": "react-scripts test",
     "serve": "ws --port 3000 --log.format dev --spa index.html",
@@ -56,7 +56,7 @@
     "react-sortablejs": "6.1.4",
     "react-spinners": "0.13.8",
     "sortablejs": "1.15.0",
-    "type-fest": "^4.26.1",
+    "type-fest": "4.26.1",
     "typescript": "5.6.3",
     "yup": "1.0.2"
   },
