--- a/ui/package.json
+++ b/ui/package.json
@@ -49,6 +49,7 @@
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-player": "2.15.1",
     "react-responsive-masonry": "2.2.0",
     "react-router-dom": "6.9.0",
