chore: add next env

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -12,6 +12,14 @@ dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
 host_name={{product_name}}-production
 env_type=production
 
+
+[next]
+141.94.126.187
+[next:vars]
+dns_name={{domain_name}}-next.inserjeunes.beta.gouv.fr
+host_name={{product_name}}-next
+env_type=next
+
 [recette]
 91.134.7.100
 [recette:vars]
