--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -5,12 +5,12 @@ repo_name=sirius
 database_name=sirius
 domain_name=sirius
 
-[production]
-141.95.167.141
-[production:vars]
-dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
-host_name={{product_name}}-production
-env_type=production
+; [production]
+; 141.95.167.141
+; [production:vars]
+; dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
+; host_name={{product_name}}-production
+; env_type=production
 
 
 [next]
