--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -5,20 +5,12 @@ repo_name=sirius
 database_name=sirius
 domain_name=sirius
 
-; [production]
-; 141.95.167.141
-; [production:vars]
-; dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
-; host_name={{product_name}}-production
-; env_type=production
-
-
-[next]
+[production]
 141.94.126.187
-[next:vars]
-dns_name={{domain_name}}-next.inserjeunes.beta.gouv.fr
-host_name={{product_name}}-next
-env_type=next
+[production:vars]
+dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
+host_name={{product_name}}-production
+env_type=production
 
 [recette]
 91.134.7.100
