chore(deps): add swiper

--- a/ui/package.json
+++ b/ui/package.json
@@ -59,6 +59,7 @@
     "react-spinners": "0.13.8",
     "react-tooltip": "5.28.0",
     "sortablejs": "1.15.0",
+    "swiper": "^11.1.14",
     "type-fest": "4.26.1",
     "typescript": "5.6.3",
     "yup": "1.0.2"
