feat(infra): add Docker login

--- a/.infra/ansible/deploy.yml
+++ b/.infra/ansible/deploy.yml
@@ -6,6 +6,10 @@
     - "../vault/vault.yml"
   tasks:
     - include_tasks: ./tasks/files_copy.yml
+    - name: Docker login
+      shell: "echo $PASS | docker login -u '{{ vault.DOCKER_LOGIN.user }}' --password-stdin"
+      environment:
+        PASS: "{{ vault.DOCKER_LOGIN.token }}"
 
     - name: Récupération des images docker
       shell:
