chore(vault): add smtp api

--- a/.infra/.env_server
+++ b/.infra/.env_server
@@ -28,6 +28,7 @@ SMTP_PORT={{ vault[env_type].SMTP_PORT }}
 SMTP_WEBHOOK_KEY={{ vault[env_type].SMTP_WEBHOOK_KEY }}
 SMTP_AUTH_USER={{ vault[env_type].SMTP_AUTH_USER }}
 SMTP_AUTH_PASS={{ vault[env_type].SMTP_AUTH_PASS }}
+SMTP_API_KEY={{ vault[env_type].SMTP_API_KEY }}
 # SLACK
 SLACK_TOKEN={{ vault[env_type].SLACK_TOKEN }}
 SLACK_SIGNING_SECRET={{ vault[env_type].SLACK_SIGNING_SECRET }}
