--- a/.infra/files/configs/reverse_proxy/locations/80_metabase.conf.template
+++ b/.infra/files/configs/reverse_proxy/locations/80_metabase.conf.template
@@ -5,4 +5,6 @@ location ~ ^/metabase(?:/(.*))?$ {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Host $server_name;
     proxy_set_header X-Forwarded-Proto $scheme;
+
+    client_max_body_size 100M;
 }
