--- a/server/package.json
+++ b/server/package.json
@@ -30,9 +30,11 @@
     "body-parser": "1.20.1",
     "bunyan": "1.8.15",
     "bunyan-prettystream": "0.1.3",
+    "camelcase-keys": "^9.1.3",
     "commander": "10.0.0",
     "cookie-parser": "1.4.6",
     "cors": "^2.8.5",
+    "decamelize-keys": "^2.0.1",
     "dotenv": "^16.4.5",
     "env-var": "7.3.0",
     "exceljs": "4.4.0",
