--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -1,10 +1,5 @@
 {
-  "extends": [
-    "plugin:import/recommended",
-    "plugin:import/typescript",
-    "plugin:react-hooks/recommended",
-    "plugin:react/jsx-runtime"
-  ],
+  "extends": ["plugin:import/typescript", "plugin:react-hooks/recommended", "plugin:react/jsx-runtime"],
   "plugins": ["react"],
   "rules": {
     "react/prop-types": "off",
