--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "import/no-relative-packages": "error",
     "import/no-useless-path-segments": ["error"],
     "import/consistent-type-specifier-style": ["error", "prefer-top-level"],
+    "import/no-unresolved": "error",
     "import/no-extraneous-dependencies": [
       "error",
       {
