--- a/.infra/ansible/deploy.yml
+++ b/.infra/ansible/deploy.yml
@@ -93,29 +93,29 @@
     #     chdir: /opt/app
     #     cmd: "/opt/app/scripts/cli.sh db:init"
 
-    - name: Add cron to classify verbatims
-      ansible.builtin.cron:
-        name: "classify-verbatims"
-        minute: "0"
-        hour: "3"
-        job: "sudo docker exec -i $(sudo docker ps --filter 'name=^sirius_server' --format '{{'{{.ID}}'}}' | head -n 1) yarn cli classify-verbatims >> /var/log/cron.log 2>&1; /opt/app/tools/monitoring/export-cron-status-prom.sh -c 'Classify Verbatims Alias' -v $?"
-      when: env_type == "production"
+    #- name: Add cron to classify verbatims
+    #  ansible.builtin.cron:
+    #    name: "classify-verbatims"
+    #    minute: "0"
+    #    hour: "3"
+    #    job: "sudo docker exec -i $(sudo docker ps --filter 'name=^sirius_server' --format '{{'{{.ID}}'}}' | head -n 1) yarn cli classify-verbatims >> /var/log/cron.log 2>&1; /opt/app/tools/monitoring/export-cron-status-prom.sh -c 'Classify Verbatims Alias' -v $?"
+    #  when: env_type == "production"
 
-    - name: Add cron to extract themes from verbatims
-      ansible.builtin.cron:
-        name: "extract-themes-verbatims"
-        minute: "0"
-        hour: "5"
-        job: "sudo docker exec -i $(sudo docker ps --filter 'name=^sirius_server' --format '{{'{{.ID}}'}}' | head -n 1) yarn cli extract-themes-verbatims >> /var/log/cron.log 2>&1; /opt/app/tools/monitoring/export-cron-status-prom.sh -c 'Extract themes from verbatims Alias' -v $?"
-      when: env_type == "production"
+    #- name: Add cron to extract themes from verbatims
+    #  ansible.builtin.cron:
+    #    name: "extract-themes-verbatims"
+    #    minute: "0"
+    #    hour: "5"
+    #    job: "sudo docker exec -i $(sudo docker ps --filter 'name=^sirius_server' --format '{{'{{.ID}}'}}' | head -n 1) yarn cli extract-themes-verbatims >> /var/log/cron.log 2>&1; /opt/app/tools/monitoring/export-cron-status-prom.sh -c 'Extract themes from verbatims Alias' -v $?"
+    #  when: env_type == "production"
 
-    - name: Add cron to send email notifications
-      ansible.builtin.cron:
-        name: "send-email-notifications"
-        minute: "0"
-        hour: "9"
-        job: "sudo docker exec -i $(sudo docker ps --filter 'name=^sirius_server' --format '{{'{{.ID}}'}}' | head -n 1) yarn cli send-email-notifications >> /var/log/cron.log 2>&1; /opt/app/tools/monitoring/export-cron-status-prom.sh -c 'Send email notifications Alias' -v $?"
-      when: env_type == "production"
+    #- name: Add cron to send email notifications
+    #  ansible.builtin.cron:
+    #    name: "send-email-notifications"
+    #    minute: "0"
+    #    hour: "9"
+    #    job: "sudo docker exec -i $(sudo docker ps --filter 'name=^sirius_server' --format '{{'{{.ID}}'}}' | head -n 1) yarn cli send-email-notifications >> /var/log/cron.log 2>&1; /opt/app/tools/monitoring/export-cron-status-prom.sh -c 'Send email notifications Alias' -v $?"
+    #  when: env_type == "production"
 
     - name: "Prune Docker"
       shell:
